# sentence-transformer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: build_image.py  build_image.sh
src/st_service/: __init__.py  cli.py  config.py  cosine.py  embedding.py  log_preview.py  main.py  schemas.py
tests/: conftest.py  test_cli.py  test_config.py  test_cosine.py  test_embedding.py  test_health.py  test_log_preview.py  test_vectorize.py
